--- a/index.html
+++ b/index.html
@@ -1,5 +1,41 @@
 <html>
 <h1>POPCORN BABY</h1>
+<style>
+/* Chrome, Safari, Opera */
+@-webkit-keyframes zoom {
+    from {
+    	-webkit-transform: scale(0.2,0.2);
+    }
+    to {
+    	-webkit-transform: scale(1,1);
+    }
+}
+@keyframes infinite-spinning {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
 
-<img src="popcornbaby.jpg">
+
+img {
+    -webkit-animation: infinite-spinning 2s infinite;
+}
+.div_class{
+  animation-name: zoom;
+  animation-duration: 2s;
+  animation-timing-function: ease-out;
+  animation-delay: 0s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-fill-mode: none;
+  animation-play-state: running;
+
+}
+</style>
+<div class="div_class">
+<img src="popcornbaby.jpg" style="width:500px;height:600px;">
+</div>
 </html>
