--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 
 img {
-    -webkit-animation: infinite-spinning 2s infinite;
+    -webkit-animation: infinite-spinning 2s linear infinite;
 }
 .div_class{
   animation-name: zoom;
   animation-duration: 2s;
-  animation-timing-function: ease-out;
+  animation-timing-function: linear;
   animation-delay: 0s;
   animation-direction: alternate;
   animation-iteration-count: infinite;
